traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:5: error: not found: value setPose
        setPose(getX()+1,getY())
        ^TraversalByColumn:10: error: not found: value setPose
        setPose(0,getY()+1)
        ^TraversalByColumn:3: error: type mismatch;
 found   : Unit
 required: Boolean
    while ((getX()!=getWorldWidth()) && getY()==getWorldHeight()){
    ^